catkin_ws/logs/frontend/build.make.096.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:287:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getImuCompensateCounter()== badFrameCnt)
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:316:40: error: no matching function for call to ‘Backend::setNewNode(SLAM::Frame&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&, int)’
      backend.setNewNode(frame, tm, im,1);
                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:316:40: note: candidate is:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:26:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Backend.h:27:7: note: void Backend::setNewNode(const SLAM::Frame&, const Matrix4f&, const Eigen::Matrix<float, 6, 6>&, uint8_t)
  void setNewNode(const Frame& frame, const Eigen::Matrix4f& tm, const Eigen::Matrix<float, 6, 6>& im, uint8_t toNode); // copy
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Backend.h:27:7: note:   no known conversion for argument 2 from ‘Eigen::Isometry3d {aka Eigen::Transform<double, 3, 1>}’ to ‘const Matrix4f& {aka const Eigen::Matrix<float, 4, 4>&}’
make[2]: *** [CMakeFiles/frontend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
